<resources>
    <string name="str_act_galerias_title">Galerias</string>
    <string name="str_dialog_fragment_aceptar">Aceptar</string>
    <string name="str_dialog_fragment_cancelar">Cancelar</string>
    <string name="str_pre_multimedia">listPref</string>
    <string name="str_pre_default_multimedia">Wi-Fi</string>
    <string name="str_frag_concepto_clave">Clave</string>
    <string name="str_frag_concepto_nombre">Nombre del Concepto</string>
    <string name="str_frag_concepto_empy">No existen conceptos</string>
    <string name="str_act_directorio_title">Directorio de Contactos</string>
    <string name="str_act_directorio_lista_vacia">No existen contactos</string>
    <string name="str_act_historial_title">Historial de Operaciones</string>
    <string name="str_adp_historial_cantidad_tiitle">Cantidad</string>
    <string name="str_adp_historial_cantidad_valor">123</string>
    <string name="str_adp_historial_fecha">01/12/2014 13:23:11</string>
    <string name="str_adp_historial_cantidad_original">Cantidad Original: </string>
    <string name="str_frag_historial_operaciones_vacio">No existen operaciones</string>
    <string name="str_frag_historial_unidadM_title">Unidad de Medida</string>
    <string name="str_frag_historial_unidadM_valor">Plano</string>
    <string name="str_dialog_operaciones_title_aditiva">Ingresar Aditiva</string>
    <string name="str_dialog_operaciones_title_deductiva">Ingresar Deductiva</string>
    <string name="str_dialog_operaciones_cantidad">Cantidad:</string>
    <string name="str_dialog_operaciones_boton_cancelar">Cancelar</string>
    <string name="str_dialog_operaciones_boton_aceptar">Aceptar</string>
    <string name="str_frag_graficas_radio_fisico_title">Físico</string>
    <string name="str_frag_graficas_radio_financiero_title">Financiero</string>
    <string name="str_frag_graficas_label_fisico_real">Real</string>
    <string name="str_frag_graficas_label_fisico_programado">Programado</string>
    <string name="str_frag_graficas_label_financiero_real">Real</string>
    <string name="str_frag_graficas_label_financiero_programado">Prgramado</string>
    <string name="str_frag_graficas_label_fisico_tendencia">Tendencia</string>
    <string name="str_frag_graficas_label_financiero_tendencia">Tendencia</string>
    <string name="str_frag_obras_porcentajes">100%</string>
    <string name="str_frag_obras_nombre_ejemplo">Este es un nombre largo de la obra
        que se mostrara en esta lista, hay que verrificar que el nombre se vea bien para el usuario y
        que ademas ocupe bien el espacio para poder hacer correctamente la distribucion del texto por
        cada adapter.</string>
    <string name="str_frag_obras_empresa_contratista">Este es el nombre de la empresa contratista 
        de la obra. </string>
    <string name="str_frag_obras_superintendente">Este es el nombre del Super Intendente</string>
    <string name="str_frag_obras_fisico_title">Físico</string>
    <string name="str_frag_obras_financiero_title">Financiero</string>
    <string name="str_frag_obras_limite_title">Límite</string>
    <string name="str_frag_obras_empy">No existen Obras para mostrar</string>
    <string name="str_config_account_type">iuyet.com.mx</string>
    <string name="str_act_documentos_title">Documentos de Obra</string>
    <string name="str_act_documentos_nombre_documento">Nombre del documento.xxx</string>
    <string name="str_act_documentos_dialog_delete_mensaje">Eliminar Documento</string>
    <string name="str_act_documentos_dialog_delete_si">Si</string>
    <string name="str_act_documentos_dialog_delete_no">No</string>
    <string name="str_act_documentos_empy">No existen doucumentos para mostrar</string>
    <string name="str_act_documentos_dialog_title">Advertencia</string>
    <string name="str_frag_avance_tendencia_titulo">Tendencia:</string>
    <string name="str_frag_avance_tendencia_valor">día(s)</string>
    <string name="str_act_ubicacion_titulo">Ubicación de Obra</string>
    <string name="str_act_ubicacion_nohay_puntos">No hay puntos para mostrar</string>
    <string name="str_act_ubicacion_makert_descripcion">Área:</string>
    <string name="str_act_maquinaria_titulo">Nuevo Reporte Maquinaria</string>
    <string name="str_act_maquinaria_dialog_delete_mensaje">Eliminar maquinaria</string>
    <string name="str_act_maquinaria_dialog_delete_si">Si</string>
    <string name="str_act_maquinaria_dialog_delete_no">No</string>
    <string name="str_act_maquinaria_seleccione">Seleccione un opción</string>
    <string name="str_act_maquinaria_dialog_title_cantidad_insert">Ingresa una Cantidad</string>
    <string name="str_act_maquinaria_dialog_title_cantidad_update">Nueva Cantidad</string>
    <string name="str_act_maquinaria_ver_reporte_maquinaria">Ver Reporte de Maquinaria</string>
    <string name="str_act_personal_titulo">Nuevo Reporte Personal</string>
    <string name="str_act_personal_cantidad">Cantidad</string>
    <string name="str_act_personal_cantidad_nueva">Nueva Cantidad</string>
    <string name="str_act_personal_cantidad_dialog_title">Ingresa una Cantidad</string>
    <string name="str_act_personal_dialog_delete_mensaje">Eliminar personal</string>
    <string name="str_act_personal_dialog_delete_si">Si</string>
    <string name="str_act_personal_dialog_delete_no">No</string>
    <string name="str_frag_personal_sincronizado">Sincronizado</string>
    <string name="str_frag_personal_no_sincronizado">No Sincronizado</string>
    <string name="str_frag_personal_empy">No existen elementos para mostrar</string>
    <string name="str_act_estimacion_titulo">Nueva Estimación</string>
    <string name="str_act_estimacion_faltan_fechas">Faltan fechas por ingresar</string>
    <string name="str_act_estimacion_falta_numero_estimacion">No ha ingresado Número de Estimación</string>
    <string name="str_act_estimacion_guardado_ok">Estimación Guardada</string>
    <string name="str_act_estimacion_conceptos_agragados_title">Conceptos Agregados</string>
    <string name="str_act_estimacion_fecha_termino_menor">La fecha de Termino NO puede ser menor a la fecha de Inicio</string>
    <string name="str_act_notas_titulo">Nueva Nota</string>
    <string name="str_act_notas_not_delete">La nota no puede ser eliminada porque ya fue sincronizada</string>
    <string name="str_frag_notas_empy">No hay Notas para mostrar</string>
    <string name="str_act_ayuda_name">Ayuda</string>
    <string name="str_act_conf_title">Configuraciones</string>
    <string name="str_act_conf_title_Network">Sincronización</string>
    <string name="str_act_conf_descripcion">Configurar el envio de Multimedia.</string>
    <string name="str_act_acerca_version">Versión</string>
    <string name="str_act_acerca_name">Acerca de</string>
    <string name="str_titulo_logo">Coordinación</string>
    <string name="str_btn_ingresar">Entrar</string>
    <string name="str_edt_hint_usuario">Usuario</string>
    <string name="str_edt_hint_contrasena">Contraseña</string>
    <string name="str_toast_error_login">Error, Verifica tu usuario y contraseña</string>
    <string name="str_act_login_login">Iniciando Sesión...</string>
    <string name="str_act_login_dialog_title">Advertencia</string>
    <string name="str_act_login_dialog_mensaje">Ya existe una cuenta asociada a este dispositivo, si continua, la información que no haya sido sincronizada se perderá, desea continuar?</string>
    <string name="app_name">CAO Supervisor</string>
    <string name="titulo_principal">Mis Obras</string>
    <string name="str_app_construccion">Próximamente...</string>
    <string name="str_act_main_sesion_cerrada">Sesión Cerrada</string>
    <string name="str_dialog_opcines_archivo_no_soportado">Archivo no soportado</string>
    <string name="str_dialog_opcines_archivo_error">Error al obtener el documento o el archivo no es soportado</string>
    <string name="str_dialog_opciones_archivo_cargado">Archivo agregado correctamente</string>
    <string name="str_dialog_opciones_archivo_procesando">Procensando Archivo</string>
    <string name="str_all_rigths_reserced">All rigths reserved.</string>
    <string name="str_frag_dialog_agregar_reporte_title">Nuevo Reporte</string>
    <string name="str_toast_ok_evidencia">Evidencia Guardada</string>
    <string name="str_toast_error_evidencia">Error al Guardar</string>
    <string name="str_toast_erroserver">Servidor Inaccesible, Verifica tu Usuario y Contraseña</string>
    <string name="str_toast_sync_error">Ocurrió un error inesperado</string>
    <string name="str_toast_sync_finalizada">Sincronización Finalizada</string>
    <string name="str_toast_sync_inicia">Sincronización Iniciada...</string>
    <string name="str_toast_act_desc_guardar_ok">Evidencia Guardada</string>
    <string name="str_toast_act_desc_guardar_error">Error al guardar la Evidencia</string>
    <string name="str_toast_act_desc_guardar_descartada">Evidencia Descartada</string>
    <string name="str_toast_dialog_evidencia_error">No se puede generar la evidencia</string>
    <string name="str_toast_error_crear_archivo">Error al crear archivo</string>
    <string name="str_toast_calendar_no">Por favor instalar Google Calendar</string>
    <string name="str_toast_minutas_error">No se puede generar la Minuta</string>
    <string name="str_toast_minuta_guardar_ok">Minuta Guardada</string>
    <string name="str_toast_minuta_guardar_error">Error al guardar la Minuta</string>
    <string name="str_toast_notas_guardar">Nota Guardada</string>
    <string name="str_toast_notas_descartada">Nota Descartada</string>
    <string name="str_toast_notas_eliminada">Nota Eliminada</string>
    <string name="str_toast_minuta_eliminada">Minuta Eliminada</string>
    <string name="str_toast_error_eliminar">Error al eliminar el elemto</string>
    <string name="str_toast_rep_personal_guardar">Reporte Guardado</string>
    <string name="str_toast_rep_maquinaria_guaradar">Reporte Guardado</string>
    <string name="str_toast_rep_concepto_descardato">Reporte Descartado</string>
    <string name="str_toast_reporte_descardado">Reporte Descartado</string>
    <string name="str_toast_reporte_eliminado">Reporte Eliminado</string>
    <string name="str_toast_estimacion_eliminada">Estimación Eliminada</string>
    <string name="str_toast_pesonal_eliminado">Personal Eliminado</string>
    <string name="str_toast_documento_eliminado">Documento Eliminado</string>
    <string name="str_toast_maquinaria_eliminada">Maquinaria Eliminada</string>
    <string name="str_toast_rep_concepto_cantidad_mayor">La cantidad sobrepasa la cantidad total</string>
    <string name="str_menu_aditiva">Aditiva</string>
    <string name="str_menu_deductiva">Deductiva</string>
    <string name="str_menu_historial_operaciones">Historial</string>
    <string name="str_reporte_concepto_avance_decripcion">Descripción Total del Concepto</string>
    <string name="str_reporte_concepto_avance_importe">Importe:</string>
    <string name="str_reporte_concepto_avance_precio">Precio Unitario:</string>
    <string name="str_reporte_concepto_avance_fecha_inicio">Fecha de Inicio:</string>
    <string name="str_reporte_concepto_avance_fecha_termino">Fecha de Termino:</string>
    <string name="str_reporte_concepto_avance_titulo">Medida:</string>
    <string name="str_reporte_concepto_avance_unidad_medida">PZA</string>
    <string name="str_reporte_concepto_avance_descripcion_completa">Descripción Completa</string>
    <string name="str_reporte_concepto_avance_registro">Registro de Avance</string>
    <string name="str_reporte_concepto_avance_acomulado">Estado de Avance</string>
    <string name="str_reporte_concepto_avance_real">Cantidad Acumulada</string>
    <string name="str_reporte_concepto_avance_total">Cantidad Total</string>
    <string name="str_reporte_concepto_avance_programado">Cantidad Programada:</string>
    <string name="str_reporte_concepto_avance_val_programado">1000</string>
</resources>