<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
     
    <item 
        android:id="@+id/menu_act_reporte_concepto_historial"
        android:icon="@drawable/ic_action_data_usage"
        android:showAsAction="ifRoom"
        android:title="@string/str_menu_historial_operaciones"
        android:visible="true"/>
    
     <item
         android:id="@+id/menu_act_reporte_concepto_aditiva"
         android:icon="@drawable/ic_action_new"
         android:showAsAction="never"
         android:title="@string/str_menu_aditiva"
         android:visible="true" />
      <item
         android:id="@+id/menu_act_reporte_concepto_deductiva"
         android:icon="@drawable/ic_action_new"
         android:showAsAction="never"
         android:title="@string/str_menu_deductiva"
         android:visible="true" />

</menu>