<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal" >

    <ImageView
        android:id="@+id/img_adp_historial_operaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_action_aditiva" />

    <LinearLayout
        android:layout_width="198dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:textAlignment="gravity" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_adp_historial_cantidad_tiitle"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/txv_historial_cantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_adp_historial_cantidad_valor"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>
    
    <TextView 
        android:id="@+id/txv_historia_fecha"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_adp_historial_fecha"
        android:textAlignment="gravity"
        android:gravity="right"/>

</LinearLayout>