<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo" >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:id="@+id/linearLayout0"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentTop="true"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linearLayout1"
                style="@style/lyt_avanceConcepto_LienearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <TextView
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/str_reporte_concepto_avance_descripcion_completa"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txv_descripcion_concepto"
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:scrollHorizontally="true"
                    android:text="@string/str_reporte_concepto_avance_decripcion" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayout2"
                style="@style/lyt_avanceConcepto_LienearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout1" >

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/txv_precio_unitario"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="18dp"
                        android:layout_toRightOf="@+id/textView3"
                        android:gravity="left"
                        android:layout_weight="0.50"
                        android:text="Precio"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textView3"
                        style="@style/txv_avanceConcepto_texview1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="36dp"
                        android:text="@string/str_reporte_concepto_avance_precio"
                        android:textAlignment="gravity"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <!-- aqui -->
                    <TextView  
                        android:id="@+id/textView4"
                        style="@style/txv_avanceConcepto_texview1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentLeft="true"
                        android:layout_marginLeft="81dp"
                        android:text="@string/str_reporte_concepto_avance_importe"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/txv_importe"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="18dp"
                        android:layout_toRightOf="@+id/textView4"
                        android:layout_weight="0.50"
                        android:text="Importe"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/txv_fecha_inicio"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="18dp"
                        android:layout_toRightOf="@+id/textView5"
                        android:layout_weight="0.50"
                        android:text="FInicio"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textView5"
                        style="@style/txv_avanceConcepto_texview1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="35dp"
                        android:text="@string/str_reporte_concepto_avance_fecha_inicio"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/textView2"
                        style="@style/txv_avanceConcepto_texview1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentBottom="true"
                        android:layout_marginLeft="16dp"
                        android:text="@string/str_reporte_concepto_avance_fecha_termino"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/txv_fecha_termino"
                        android:layout_width="wrap_content"
                        android:layout_height="fill_parent"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="18dp"
                        android:layout_toRightOf="@+id/textView2"
                        android:layout_weight="0.50"
                        android:text="Ffin"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </RelativeLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/relativeLayout3"
                style="@style/lyt_avanceConcepto_LienearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2" >

                <TextView
                    style="@style/TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/str_reporte_concepto_avance_registro"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/relativeLayout1"
                    style="@style/lyt_avanceConcepto_LienearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linearLayout2"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/tvx_unidad_titulo"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/edt_cantidad_avance"
                        android:layout_alignParentTop="true"
                        android:gravity="bottom"
                        android:text="@string/str_reporte_concepto_avance_titulo"
                        android:textAlignment="gravity"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/tvx_unidad_medida"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_alignBottom="@+id/tvx_unidad_titulo"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="22dp"
                        android:layout_toRightOf="@+id/tvx_unidad_titulo"
                        android:gravity="bottom"
                        android:text="@string/str_reporte_concepto_avance_unidad_medida"
                        android:textAlignment="gravity"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <EditText
                        android:id="@+id/edt_cantidad_avance"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginLeft="22dp"
                        android:ems="5"
                        android:inputType="numberDecimal"
                        android:text="0"
                        android:maxLength="10" >
                    </EditText>
                    
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/relativeLayout2"
                style="@style/lyt_avanceConcepto_LienearLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/linearLayout2" >
                
                 <TextView
                     style="@style/TextView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="@string/str_reporte_concepto_avance_acomulado"
                     android:textAppearance="?android:attr/textAppearanceMedium"
                     android:textStyle="bold" />
                
				 <LinearLayout
				     style="@style/lyt_avanceConcepto_LienearLayout"
				     android:layout_width="match_parent"
				     android:layout_height="wrap_content"
				     android:gravity="center"
				     android:orientation="horizontal"
				     android:textAlignment="gravity" >

				     <TextView
				         style="@style/txv_avanceConcepto_texview3"
				         android:layout_width="wrap_content"
				         android:layout_height="wrap_content"
				         android:gravity="bottom"
				         android:text="@string/str_reporte_concepto_avance_real"
				         android:textAppearance="?android:attr/textAppearanceMedium" />

				     <TextView
				         style="@style/txv_avanceConcepto_texview3"
				         android:layout_width="wrap_content"
				         android:layout_height="wrap_content"
				         android:gravity="bottom"
				         android:text=" / "
				         android:textAppearance="?android:attr/textAppearanceMedium" />

				     <TextView
				         style="@style/txv_avanceConcepto_texview3"
				         android:layout_width="wrap_content"
				         android:layout_height="wrap_content"
				         android:gravity="bottom"
				         android:text="@string/str_reporte_concepto_avance_total"
				         android:textAppearance="?android:attr/textAppearanceMedium" />
				 </LinearLayout>
                
                <LinearLayout
                    style="@style/lyt_avanceConcepto_LienearLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:textAlignment="gravity" >

                    <TextView
                        android:id="@+id/tvx_avance_concepto"
                        style="@style/txv_avanceConcepto_texview1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:text="10"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/textView1"
                        style="@style/txv_avanceConcepto_texview1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
           
                        android:gravity="center"
                        android:text="/"
                        android:textAlignment="gravity"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                    <TextView
                        android:id="@+id/tvx_cantidad_total"
                        style="@style/txv_avanceConcepto_texview1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="bottom"
                        android:text="100"
                        android:textAppearance="?android:attr/textAppearanceMedium" />

                </LinearLayout>
                
                <LinearLayout 
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:textAlignment="gravity"
                    android:gravity="center">
                    
                    <TextView 
                        android:id="@+id/txv_repcCon_titulo_ava_programado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_reporte_concepto_avance_programado"
                        android:textStyle="bold"
                        style="@style/TextView"/>
                    <TextView 
                        style="@style/TextView"
                        android:id="@+id/txv_repCon_val_ava_programado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_reporte_concepto_avance_val_programado"/>
                    <TextView
                        style="@style/TextView" 
                        android:id="@+id/txv_repCon_val_unidad_progrmado"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/str_reporte_concepto_avance_unidad_medida"/>
                    
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>